--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,6 @@ body {
   font-family: arial, sans-serif;
 }
 
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid rgb(223, 225, 229);
-  border-radius: 8px;
-}
 h1 {
   color: rgb(135, 135, 135);
   display: block;
@@ -27,4 +20,40 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19.2px;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid rgb(223, 225, 229);
+  border-radius: 8px;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 10px;
+  width: 64px;
+  height: 64px;
+}
+
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.weather-temperature .units {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  margin-top: 6px;
+  position: relative;
+  top: -34px;
 }
