--- a/src/styles.css
+++ b/src/styles.css
@@ -61,3 +61,12 @@ li:first-letter {
   position: relative;
   top: -34px;
 }
+
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+  cursor: default;
+}
